--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="index.html" class="grid-4">
           <img src="img/bikcraft.svg" alt="Logo Bikcraft">
         </a>
-      <nav class="grid-12 header_menu">
+      <nav class="header_menu grid-12">
         <ul>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="produtos.html">Produtos</a></li>
