--- a/index.html
+++ b/index.html
@@ -13,21 +13,32 @@
   </head>
   <body>
 
-    <header class="header">
-      <div class="container">
-        <a href="index.html" class="grid-4">
-          <img src="img/bikcraft.svg" alt="Logo Bikcraft">
-        </a>
-      <nav class="header_menu grid-12">
-        <ul>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contato.html">Contato</a></li>
-        </ul>
-      </nav>
+  <header class="header">
+    <div class="container">
+      <a href="index.html" class="grid-4">
+        <img src="img/bikcraft.svg" alt="Logo Bikcraft">
+      </a>
+    <nav class="header_menu grid-12">
+      <ul>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="produtos.html">Produtos</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
     </div>
-    </header>
+  </header>
+
+  <section class="introducao">
+    <div class="container">
+      <h1>Bicicletas Feitas a Mão</h1>
+      <blockquote class="quote-externo">
+        <p>"Não tenha nada em sua casa que você não considere útil ou acredita ser bonito"</p>
+        <cite>WILLIAM MORRIS</cite>
+      </blockquote>
+      <a href="produtos.html" class="btn">Orçamento</a>
+    </div>
+  </section>
 
   </body>
 </html>
