--- a/index.html
+++ b/index.html
@@ -40,5 +40,42 @@
     </div>
   </section>
 
+  <section class="produtos container">
+    <h2 class="subtitulo">Produtos</h2>
+    <ul class="produtos_lista">
+
+      <li class="grid-1-3">
+        <div class="produtos_icone">
+          <img src="img/produtos/passeio.svg" alt="Bikcraft Passeio">
+        </div>
+        <h3>Passeio</h3>
+        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+      </li>
+
+      <li class="grid-1-3">
+        <div class="produtos_icone">
+          <img src="img/produtos/esporte.svg" alt="Bikcraft Passeio">
+        </div>
+        <h3>Esporte</h3>
+        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+      </li>
+
+      <li class="grid-1-3">
+        <div class="produtos_icone">
+          <img src="img/produtos/retro.svg" alt="Bikcraft Passeio">
+        </div>
+        <h3>Retrô</h3>
+        <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+      </li>
+
+    </ul>
+
+    <div class="call">
+      <p>clique aqui e veja os detalhes dos produtos</p>
+      <a href="produtos.html" class="btn btn-preto">Produtos</a>
+    </div>
+
+  </section>
+
   </body>
 </html>
