Adding footer section

--- a/index.html
+++ b/index.html
@@ -117,5 +117,49 @@
     </div>
   </section>
 
+  <section class="quebra">
+    <blockquote class="quote-externo container">
+      <p>"O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana."</p>
+      <cite>WILLIAM MORRIS</cite>
+    </blockquote>
+  </section>
+
+  <footer>
+    <div class="footer">
+      <div class="container">
+
+        <div class="grid-8 footer_historia">
+          <h3>Nossa História</h3>
+          <p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.</p>
+        </div>
+
+        <div class="grid-4 footer_contato">
+          <h3>Contato</h3>
+          <ul>
+            <li>- 21 2323-4343</li>
+            <li>- contato@bikcraft.com</li>
+            <li>- Botafogo - RJ</li>
+          </ul>
+        </div>
+
+        <div class="grid-4 footer_redes">
+          <h3>Contato</h3>
+          <ul>
+            <li><a href="http://www.facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg" alt=""></a></li>
+            <li><a href="http://www.instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg" alt=""></a></li>
+            <li><a href="http://www.twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt=""></a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="copy">
+      <div class="container">
+        <p class="grid-16">Bikcraft 2020 - Todos os direitos reservados.</p>
+      </div>
+    </div>
+  </footer>
+
   </body>
 </html>
